--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
-version: '3'
+version: '3.2'
 services:
   web:
     build: .
+    volumes:
+    - type: bind
+      source: ./.env
+      target: /app/.env 
     ports:
     - "8888:8888"
