Add telegram notification after execution

--- a/jobs/bill_to_spreadsheet/Dockerfile
+++ b/jobs/bill_to_spreadsheet/Dockerfile
@@ -8,4 +8,7 @@ ENV ENDPOINT=$ENDPOINT
 ENV ADMIN_SECRET=$ADMIN_SECRET
 ENV GOOGLE_CRED=$GOOGLE_CRED
 ENV SPREADSHEET_ID=$SPREADSHEET_ID
+ENV TELEGRAM_CHANNEL_ID=$TELEGRAM_CHANNEL_ID
+ENV TELEGRAM_TOKEN=$TELEGRAM_TOKEN
+ENV JOB_NAME=$JOB_NAME
 CMD ["python", "/app/run.py"]
