--- a/jobs/vote/Dockerfile
+++ b/jobs/vote/Dockerfile
@@ -8,4 +8,7 @@ ENV ENDPOINT=$ENDPOINT
 ENV ADMIN_SECRET=$ADMIN_SECRET
 ENV SLACK_TOKEN=$SLACK_TOKEN
 ENV SLACK_CHANNEL=$SLACK_CHANNEL
+ENV TELEGRAM_CHANNEL_ID=$TELEGRAM_CHANNEL_ID
+ENV TELEGRAM_TOKEN=$TELEGRAM_TOKEN
+ENV JOB_NAME=$JOB_NAME
 CMD ["python", "/app/run.py"]
